--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.0.0-beta.9",
+    "dexie": "^4.0.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "4.0.0-beta.9"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "tailwindcss": "4.0.0-beta.9",
     "@biomejs/biome": "1.9.4",
     "@polgubau/configs": "^1.1.0",
     "@types/react": "^18.3.18",
